Add login via firebase

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -186,3 +186,14 @@
   max-width: 600px;
   margin: 0 auto
 }
+
+/* custom section */
+/*
+.btn, .btn-large, .btn-small {
+  background-color: #658EF6;
+}
+
+.orange.lighten-1 {
+  background-color: #658EF6 !important;
+}
+*/
