--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -192,8 +192,8 @@
 .btn, .btn-large, .btn-small {
   background-color: #658EF6;
 }
+*/
 
 .orange.lighten-1 {
-  background-color: #658EF6 !important;
+  background-color: #98C4FA !important;
 }
-*/
